[gd_scene load_steps=15 format=3 uid="uid://jchfk7d78ss5"]

[ext_resource type="Theme" uid="uid://d1rxorbgvgyer" path="res://ui/ridiculous_stream_main.theme" id="1_t6rhf"]
[ext_resource type="Script" uid="uid://o423163rrbby" path="res://instances/pnl_chat.gd" id="1_x2vuy"]
[ext_resource type="PackedScene" uid="uid://csqa2q3atku2i" path="res://instances/pnl_connect.tscn" id="3_e1ino"]
[ext_resource type="Texture2D" uid="uid://dpyn121ra1pa" path="res://ui/sprites/close.png" id="3_t6rhf"]
[ext_resource type="PackedScene" uid="uid://d4lkycruly2ye" path="res://instances/pnl_mods.tscn" id="4_v34se"]

[sub_resource type="Gradient" id="Gradient_t6rhf"]
offsets = PackedFloat32Array(0.181818, 1)
colors = PackedColorArray(0.416828, 0.314635, 0.88178, 1, 0.877244, 0.435312, 0.952671, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a570u"]
gradient = SubResource("Gradient_t6rhf")
width = 24
height = 24
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_ei1da"]
offsets = PackedFloat32Array(0.350649, 1)
colors = PackedColorArray(0.260413, 0.568259, 0.94716, 1, 0.416828, 0.314635, 0.88178, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nvoaq"]
gradient = SubResource("Gradient_ei1da")
width = 24
height = 24
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_4jb8o"]
offsets = PackedFloat32Array(0.545455, 1)
colors = PackedColorArray(0.249465, 0.573858, 0.490234, 1, 0.416828, 0.314635, 0.88178, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_x6x1q"]
gradient = SubResource("Gradient_4jb8o")
width = 24
height = 24
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_jjpta"]
offsets = PackedFloat32Array(0.350649, 1)
colors = PackedColorArray(0.806029, 0.506473, 0.187616, 1, 0.151185, 0.463037, 0.456321, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wgvb2"]
gradient = SubResource("Gradient_jjpta")
width = 24
height = 24
fill_to = Vector2(0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_req1k"]
gradient = SubResource("Gradient_t6rhf")
width = 24
height = 24
fill_to = Vector2(0, 1)

[node name="pnl_chat" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 847.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t6rhf")
script = ExtResource("1_x2vuy")

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="top" type="PanelContainer" parent="vb"]
layout_mode = 2

[node name="hb" type="HBoxContainer" parent="vb/top"]
layout_mode = 2

[node name="lb_channel" type="Label" parent="vb/top/hb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "TheYagich"
vertical_alignment = 1

[node name="btn_close" type="Button" parent="vb/top/hb"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_t6rhf")
expand_icon = true

[node name="pnl_mods" parent="vb" instance=ExtResource("4_v34se")]
layout_mode = 2

[node name="pnl_msg" type="PanelContainer" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ln_msg" type="LineEdit" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.160784, 0.764706, 0.65098, 1)
placeholder_text = "chat"

[node name="hb_msg" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="ln_announce" type="LineEdit" parent="vb/hb_msg"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.160784, 0.764706, 0.65098, 1)
placeholder_text = "announcement"

[node name="opt_announce_color" type="OptionButton" parent="vb/hb_msg"]
unique_name_in_owner = true
layout_mode = 2
selected = 4
item_count = 5
popup/item_0/text = "primary"
popup/item_0/icon = SubResource("GradientTexture2D_a570u")
popup/item_0/id = 4
popup/item_1/text = "blue"
popup/item_1/icon = SubResource("GradientTexture2D_nvoaq")
popup/item_1/id = 1
popup/item_2/text = "green"
popup/item_2/icon = SubResource("GradientTexture2D_x6x1q")
popup/item_2/id = 2
popup/item_3/text = "orange"
popup/item_3/icon = SubResource("GradientTexture2D_wgvb2")
popup/item_3/id = 3
popup/item_4/text = "purple"
popup/item_4/icon = SubResource("GradientTexture2D_req1k")
popup/item_4/id = 4

[node name="hb" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="sl_font_size" type="HSlider" parent="vb/hb"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 12.0
max_value = 72.0
value = 28.0

[node name="lb_font_size" type="Label" parent="vb/hb"]
unique_name_in_owner = true
layout_mode = 2
text = "15"

[node name="chat_msg" type="AudioStreamPlayer" parent="."]

[node name="pnl_connect" parent="." instance=ExtResource("3_e1ino")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="vb/top/hb/btn_close" to="." method="_on_btn_close_pressed"]
[connection signal="text_submitted" from="vb/ln_msg" to="." method="_on_ln_msg_text_submitted"]
[connection signal="text_submitted" from="vb/hb_msg/ln_announce" to="." method="_on_ln_announce_text_submitted"]
[connection signal="value_changed" from="vb/hb/sl_font_size" to="." method="_on_sl_font_size_value_changed"]
